modificação do nome da aplicação para ficar no padrão do curso anterior, inserção do shered preferences para controlar o envio desnecessário do token, integração para enviar o token para o servidor

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.alura.dev_meetups">
+    package="br.com.alura.meetups">
    <application
-        android:label="dev_meetups"
+        android:label="meetups"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
