--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dev_meetups
+name: meetups
 description: Dev meetups is a flutter project to a course of the Alura
 
 # The following line prevents the package from being accidentally published to
